--- a/scss/style.scss
+++ b/scss/style.scss
@@ -395,21 +395,22 @@ input {
   .notification__close {
     opacity: 0;
     position: absolute;
-    right: -3px;
+    right: -4px;
     cursor: pointer;
     top: -3px;
     width: 17px;
     height: 17px;
     transition: opacity 0.4s;
     border-radius: 50%;
-    background: rgba(255, 255, 255, 0.3);
+    background: var(--close-icon-bg);
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 4px;
     backdrop-filter: blur(50px);
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
     i {
-      padding-top: 1px;
+      padding-top: 0.5px;
     }
   }
   .notification__header {
